white space issue fix

--- a/EmailDesign.css
+++ b/EmailDesign.css
@@ -145,6 +145,7 @@ button {
 .footer-section {
   background-color: #052f66;
   width: 640px;
+  height: 84px;
   text-align: center;
 }
 
